Fix close button spacing

--- a/lesscss/components/libraries.less
+++ b/lesscss/components/libraries.less
@@ -1,7 +1,7 @@
 .libraries__header {
   display: flex;
   flex-flow: row;
-  justify-content: space-betweens;
+  justify-content: space-between;
 }
 
 .c-listing-button {
