--- a/lesscss/components/statblock.less
+++ b/lesscss/components/statblock.less
@@ -1,3 +1,9 @@
+.combatant-details__header {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+}
+
 .c-statblock-header__with-portrait--thumbnail {
   flex-direction: row;
   align-items: center;
